Fix Copilot comments
